# cus-tf-idf

./: .gitignore  pyproject.toml
src/cli/: cli.py
src/cus_tf_idf/: __init__.py  main.py
tests/: ex4.py  test_1.py
