[project]
name = "cus-tf-idf"
version = "0.1.0"
description = ""
authors = [
    {name = "trungdung1711",email = "trungdunglebui17112004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "cus_tf_idf", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
